Prevent hover card showing on mobile
- Fixes the issue where the overlay card text shows on mobile (where that text is displayed below instead)

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,21 @@
 body {
     background-color: #121212;
 }
+/* try to get footer sticky */
+html, body {
+    height: 100%;
+    margin: 0;
+}
 
+.container-fluid {
+    min-height: 100% !important;
+    margin-bottom: -50px;
+}
+
+.footer, .fExtend {
+    height: 50px;
+}
+/* */
 .text-card {
     color: white !important;
 }
